aos on other pages

--- a/premedia/infosys/chairmans-statement.html
+++ b/premedia/infosys/chairmans-statement.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="initial-scale=1, maximum-scale=1, width=device-width, height=device-height">
 	<title>Chairman's Statement | Annual Report 2020</title>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="css/aos.min.css">
 	<link rel="stylesheet" type="text/css" href="css/fonts.css">
 	<link rel="stylesheet" type="text/css" href="css/style.min.css">
 </head>
@@ -57,8 +58,8 @@
 				<div class="category-label mt-md-5 mt-2">Chairman's statement</div>
 				<h1 class="bg-theme-blue text-white font-weight-bold p-3 my-3">Thinking Resilience. Thinking Scale.</h1>
 				<div class="image-container my-5">
-					<img class="img-fluid" src="img/HD/Nandan-Nilekani.jpg">
-					<div class="blockquote p-4 my-5 d-none d-lg-block">
+					<img data-aos="fade-left" class="img-fluid" src="img/HD/Nandan-Nilekani.jpg">
+					<div data-aos="fade-right" data-aos-delay="500" data-aos-duration="1500" class="blockquote p-4 my-5 d-none d-lg-block">
 						<p class="font-theme-blue my-0">
 							The task is to build systems that can quickly scale and evolve to serve the changing needs of the enterprise and its workforce. That is the thinking that guides us as we navigate our clients to respond intuitively to opportunities, and help build value chains that are both efficient and robust to deal with unexpected challenges. That is the resilience our clients seek. That is Live Enterprise.
 						</p>
@@ -70,7 +71,7 @@
 				<p>
 					But the real test will come in the following months when we must find ways to understand and respond to the gradually evolving dynamics of the new normal. Technology will prove an ally here. That said, building systems and operating models at enterprisescale is an exercise in factoring scale intrinsically into the design of solutions. For example, our systems were severely tested in their ability to scale when for a multinational telecommunications company, we leveraged Launchpad, our remote employee onboarding platform, to include their employees, spread across three countries, into a new project environment with access to over 200 IT applications, network operations and six large data centers connecting ~16,000 servers. For another American multinational in the food business, we are now leveraging our Live Enterprise Application Platform to enable remote knowledge transfer for their global project teams while digitizing all their standard operating procedures. <span class="d-none d-lg-inline">The task then is to build systems that can quickly scale and evolve to serve the changing needs of the enterprise and its workforce. That is the thinking that guides us as we navigate our clients to respond intuitively to opportunities, and help build value chains that are both efficient and robust to deal with unexpected challenges. That is the resilience our clients seek. That is Live Enterprise.</span>
 				</p>
-				<div class="blockquote d-lg-none p-3">
+				<div data-aos="zoom" data-aos-offset="200" class="blockquote d-lg-none p-3">
 					<p class="font-theme-blue my-0">
 						The task is to build systems that can quickly scale and evolve to serve the changing needs of the enterprise and its workforce. That is the thinking that guides us as we navigate our clients to respond intuitively to opportunities, and help build value chains that are both efficient and robust to deal with unexpected challenges. That is the resilience our clients seek. That is Live Enterprise.
 					</p>
@@ -78,7 +79,7 @@
 				<p>
 					The post-cloud era – characterized by increasingly intelligent, autonomous and self-healing digital infrastructure – is bringing our industry the opportunity to do so much more. Our strong balance sheet, great growth momentum, scaled digital systems for our people to deliver collaboratively and an executive management team relentlessly focused on executing our digital strategy, uniquely position Infosys to deal with the unprecedented challenges of these times and help our clients navigate to the next normal.
 				</p>
-				<div class="mt-5 w-50 ml-auto text-right">
+				<div data-aos="fade" class="mt-5 w-50 ml-auto text-right">
 					<img class="img-fluid" src="img/nn-sig.png">
 				</div>
 				<p class="text-right">Nandan M. Nilekani</p>
