--- a/premedia/infosys/live-enterprise/intuition.html
+++ b/premedia/infosys/live-enterprise/intuition.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="initial-scale=1, maximum-scale=1, width=device-width, height=device-height">
 	<title>Intution | Live Enterprise | Annual Report 2020</title>
 	<link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="../css/aos.min.css">
 	<link rel="stylesheet" type="text/css" href="../css/fonts.css">
 	<link rel="stylesheet" type="text/css" href="../css/style.min.css">
 </head>
@@ -66,7 +67,7 @@
 					</div>
 				</div>
 
-				<div data-article-body="one" class="mt-4">
+				<div data-article-body="one" class="mt-4 active">
 					<h2 class="mb-4">Reimagining everyday decisions at Infosys</h2>
 					<p>
 						Early in our journey to becoming an always resilient, evolving live enterprise, we recognized the need to build intuitive decision-making capabilities within a landscape of reimagined processes, experiences and digital infrastructure. This, we knew, would be vital for automating routine and deterministic decisions, while at the same time providing instant simulation capabilities for users to experiment and test in, before making more complex decisions about what and how to adapt in response to disruption.
@@ -81,9 +82,9 @@
 					</p>
 
 					<div class="image-container">
-						<img class="img-fluid h-100 d-block mx-auto" src="../img/HD/Intuition1.png">
+						<img data-aos="fade-left" class="img-fluid h-100 d-block mx-auto" src="../img/HD/Intuition1.png">
 						<div class="floating-image d-none d-lg-block">
-							<img class="img-fluid" src="../img/Intuition2.png">
+							<img data-aos="fade-right" data-aos-delay="500" class="img-fluid" src="../img/Intuition2.png">
 						</div>
 					</div>
 
@@ -107,15 +108,15 @@
 						Not surprisingly, our clients have expressed great interest in building similar capabilities to serve their own business contexts.
 					</p>
 					<div class="d-flex my-5 flex-row-reverse align-items-center justify-content-end">
-						<div class="author">
+						<div data-aos="fade-right" data-aos-delay="500" data-aos-offset="0" class="author">
 							<div class="category-label mb-1">Mohammed Rafee Tarafdar</div>
 							<div>SVP – Unit Technology Officer</div>
 						</div>
-						<img src="../img/Intuition3.jpg" class="img-fluid rounded-circle mr-5" alt="...">
+						<img data-aos="fade" data-aos-offset="0" src="../img/Intuition3.jpg" class="img-fluid rounded-circle mr-5" alt="...">
 					</div>
 				</div>
 
-				<div data-article-body="two" class="mt-4 d-none">
+				<div data-article-body="two" class="mt-4" style="display:none;">
 					<h2 class="mb-4">Letting intuition run their business</h2>
 					<p>
 						The human mind is wired to see patterns. It processes information in conjunction with insights from past experiences to create intuition. Intuition informs much of our decisions. Today, we are helping organizations develop a similar intuition to drive decisions swiftly, accurately and to act with resilience in the face of disruption. AI and automation lie at the core of this endeavor.
@@ -133,8 +134,8 @@
 						For one client, in the heavy engineering industry, we leveraged machine learning techniques including Deep Learning Neural Networks to help their experts improve underwater corrosion detection and assessment. We instituted data patterns and made it possible to predict leakages thereby ensuring a high degree of asset integrity and standards of safety.
 					</p>
 
-					<div class="image-container">
-						<img class="img-fluid" src="../img/HD/Intuition4.png">
+					<div data-aos="fade" class="image-container">
+						<img data-aos="zoom" data-aos-delay="1000"  class="img-fluid" src="../img/HD/Intuition4.png">
 					</div>
 
 					<p>
@@ -149,11 +150,11 @@
 						In the enterprise context, there is sometimes the need to respond to disruption that emanates after a crisis. Our clients today need to chart a meaningful way forward in the new normal post COVID-19. We are working to build machine learning algorithms and automation as potential solutions to the recent disruptions in their workflows and other processes that rely primarily on human interventions. Our research in areas like Explainable AI, Transfer Learning, Generative AI and Capsule Networks are great resources that enrich this journey.
 					</p>
 					<div class="d-flex my-5 flex-row-reverse align-items-center justify-content-end">
-						<div class="author">
+						<div data-aos="fade-right" data-aos-delay="500" data-aos-offset="0" class="author">
 							<div class="category-label mb-1">Balakrishna D.R.</div>
 							<div>SVP – Head, AI & Automation Services</div>
 						</div>
-						<img src="../img/HD/Intuition5.png" class="img-fluid rounded-circle mr-5" alt="...">
+						<img data-aos="fade" data-aos-offset="1" src="../img/HD/Intuition5.png" class="img-fluid rounded-circle mr-5" alt="...">
 					</div>
 				</div>
 			</div>
