--- a/premedia/infosys/keytrends.html
+++ b/premedia/infosys/keytrends.html
@@ -6,6 +6,7 @@
 	<title>Key Trends | Annual Report 2020</title>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/chartist.min.css">
+	<link rel="stylesheet" type="text/css" href="css/aos.min.css">
 	<link rel="stylesheet" type="text/css" href="css/fonts.css">
 	<link rel="stylesheet" type="text/css" href="css/style.min.css">
 </head>
@@ -63,7 +64,7 @@
 		<div class="row no-gutters">
 			<div class="col-md-10 col-lg-8 my-lg-2">
 				<h1 class="font-theme-blue my-2">Key Trends demonstrate continued<br class="d-none d-lg-block"> Business Success</h1>
-				<div class="py-3 blockquote">
+				<div class="py-3 blockquote-2">
 					In 2019, Infosys achieved excellent operating results. I am delighted about the launches of our services, the launch of the Infosys Live Enterprise Suite and the acquisition of Simplus, one of the fastest growing Salesforce Platinum Partners in the USA and Australia. 
 				</div>
 				<div class="d-flex my-3 flex-row-reverse align-items-center justify-content-end mx-auto">
