new search overlay, fix keytrends footer+ overflow bugs

--- a/premedia/infosys/keytrends.html
+++ b/premedia/infosys/keytrends.html
@@ -60,7 +60,6 @@
 				<h1 class="bg-theme-blue text-white p-3 my-3">Key Trends</h1>
 			</div>
 		</div>
-		<div class="container">
 		<div class="row no-gutters">
 			<div class="col-md-10 col-lg-8 my-lg-2">
 				<h1 class="font-theme-blue my-2">Key Trends demonstrate continued<br class="d-none d-lg-block"> Business Success</h1>
@@ -134,7 +133,7 @@
 				<div id="clients" class="ct-chart ct-perfect-fifth"></div>
 			</div>
 		</div> -->
-	<!-- </div> -->
+	</div>
 	<div id="tooltip"></div>
 	<div class="footer bg-theme-blue mt-5 text-white py-5 px-2">
 		<div class="container">
