footer social links, all pdfs for download

--- a/premedia/infosys/chairmans-statement.html
+++ b/premedia/infosys/chairmans-statement.html
@@ -110,11 +110,11 @@
 				<div class="col-md-3 py-3">
 					<h5 class="text-uppercase font-weight-bold">Connect With Us</h5>
 					<div class="d-flex justify-content-between align-items-center flex-wrap w-lg-75 w-md-100 w-sm-50 w-75">
-						<a class="social w-lg-20 w-md-25 w-20 pr-2 mb-2" href="#"><img class="img-fluid" src="img/social/linkedin.png"></a>
-						<a class="social w-lg-20 w-md-25 w-20 pr-2 mb-2" href="#"><img class="img-fluid" src="img/social/instagram.png"></a>
-						<a class="social w-lg-20 w-md-25 w-20 pr-2 mb-2" href="#"><img class="img-fluid" src="img/social/facebook.png"></a>
-						<a class="social w-lg-20 w-md-25 w-20 pr-2 mb-2" href="#"><img class="img-fluid" src="img/social/youtube.png"></a>
-						<a class="social w-lg-20 w-md-25 w-20 pr-2 mb-2" href="#"><img class="img-fluid" src="img/social/twitter.png"></a>
+						<a class="social w-lg-20 w-md-25 w-20 pr-2 mb-2" target="_blank" href="https://www.linkedin.com/company/infosys"><img class="img-fluid" src="img/social/linkedin.png"></a>
+						<a class="social w-lg-20 w-md-25 w-20 pr-2 mb-2" target="_blank" href="https://www.instagram.com/infosys/"><img class="img-fluid" src="img/social/instagram.png"></a>
+						<a class="social w-lg-20 w-md-25 w-20 pr-2 mb-2" target="_blank" href="https://www.facebook.com/Infosys/"><img class="img-fluid" src="img/social/facebook.png"></a>
+						<a class="social w-lg-20 w-md-25 w-20 pr-2 mb-2" target="_blank" href="https://www.youtube.com/user/Infosys"><img class="img-fluid" src="img/social/youtube.png"></a>
+						<a class="social w-lg-20 w-md-25 w-20 pr-2 mb-2" target="_blank" href="https://twitter.com/infosys"><img class="img-fluid" src="img/social/twitter.png"></a>
 					</div>
 				</div>
 			</div>
