--- a/premedia/infosys/downloads.html
+++ b/premedia/infosys/downloads.html
@@ -57,35 +57,35 @@
 				<div class="category-label mt-md-5 mt-2">Downloads</div>
 				<h1 class="bg-theme-blue text-white p-3 my-3">Downloads</h1>
 				<div class="downloads-table">
-					<a href="#" class="download-item">
+					<a target="_blank" class="download-item" href="pdfs/boardsreport.pdf">
 						<h4>Board's Report</h4>
 						<div href="#"></div>
 					</a>
-					<a href="#" class="download-item">
+					<a target="_blank" class="download-item" href="pdfs/boardsreport_annex.pdf">
 						<h4>Annexures to the Board’s report</h4>
 						<div href="#"></div>
 					</a>
-					<a href="#" class="download-item">
+					<a target="_blank" class="download-item" href="pdfs/mgmt_d_a.pdf">
 						<h4>Management’s discussion and analysis</h4>
 						<div href="#"></div>
 					</a>
-					<a href="#" class="download-item">
+					<a target="_blank" class="download-item" href="pdfs/corp_gov.pdf">
 						<h4>Corporate governance report</h4>
 						<div href="#"></div>
 					</a>
-					<a href="#" class="download-item">
+					<a target="_blank" class="download-item" href="pdfs/ceo_cfo.pdf">
 						<h4>CEO and CFO certification</h4>
 						<div href="#"></div>
 					</a>
-					<a href="#" class="download-item">
+					<a target="_blank" class="download-item" href="pdfs/standalone_f_s.pdf">
 						<h4>Standalone financial statements</h4>
 						<div href="#"></div>
 					</a>
-					<a href="#" class="download-item">
+					<a target="_blank" class="download-item" href="pdfs/consolidated_f_s.pdf">
 						<h4>Consolidated financial statements</h4>
 						<div href="#"></div>
 					</a>
-					<a href="#" class="download-item">
+					<a target="_blank" class="download-item" href="pdfs/business_r_r.pdf">
 						<h4>Business responsibility report</h4>
 						<div href="#"></div>
 					</a>
@@ -116,11 +116,11 @@
 				<div class="col-md-3 py-3">
 					<h5 class="text-uppercase font-weight-bold">Connect With Us</h5>
 					<div class="d-flex justify-content-between align-items-center flex-wrap w-lg-75 w-md-100 w-sm-50 w-75">
-						<a class="social w-lg-20 w-md-25 w-20 pr-2 mb-2" href="#"><img class="img-fluid" src="img/social/linkedin.png"></a>
-						<a class="social w-lg-20 w-md-25 w-20 pr-2 mb-2" href="#"><img class="img-fluid" src="img/social/instagram.png"></a>
-						<a class="social w-lg-20 w-md-25 w-20 pr-2 mb-2" href="#"><img class="img-fluid" src="img/social/facebook.png"></a>
-						<a class="social w-lg-20 w-md-25 w-20 pr-2 mb-2" href="#"><img class="img-fluid" src="img/social/youtube.png"></a>
-						<a class="social w-lg-20 w-md-25 w-20 pr-2 mb-2" href="#"><img class="img-fluid" src="img/social/twitter.png"></a>
+						<a class="social w-lg-20 w-md-25 w-20 pr-2 mb-2" target="_blank" href="https://www.linkedin.com/company/infosys"><img class="img-fluid" src="img/social/linkedin.png"></a>
+						<a class="social w-lg-20 w-md-25 w-20 pr-2 mb-2" target="_blank" href="https://www.instagram.com/infosys/"><img class="img-fluid" src="img/social/instagram.png"></a>
+						<a class="social w-lg-20 w-md-25 w-20 pr-2 mb-2" target="_blank" href="https://www.facebook.com/Infosys/"><img class="img-fluid" src="img/social/facebook.png"></a>
+						<a class="social w-lg-20 w-md-25 w-20 pr-2 mb-2" target="_blank" href="https://www.youtube.com/user/Infosys"><img class="img-fluid" src="img/social/youtube.png"></a>
+						<a class="social w-lg-20 w-md-25 w-20 pr-2 mb-2" target="_blank" href="https://twitter.com/infosys"><img class="img-fluid" src="img/social/twitter.png"></a>
 					</div>
 				</div>
 			</div>
