--- a/premedia/infosys/downloads.html
+++ b/premedia/infosys/downloads.html
@@ -57,35 +57,35 @@
 				<div class="category-label mt-md-5 mt-2">Downloads</div>
 				<h1 class="bg-theme-blue text-white p-3 my-3">Downloads</h1>
 				<div class="downloads-table">
-					<a target="_blank" class="download-item" href="pdfs/boardsreport.pdf">
+					<a target="_blank" class="download-item" href="pdfs/Boards_Report.pdf">
 						<h4>Board's Report</h4>
 						<div href="#"></div>
 					</a>
-					<a target="_blank" class="download-item" href="pdfs/boardsreport_annex.pdf">
+					<a target="_blank" class="download-item" href="pdfs/Annexures_to_the_Boards_Report.pdf">
 						<h4>Annexures to the Board’s report</h4>
 						<div href="#"></div>
 					</a>
-					<a target="_blank" class="download-item" href="pdfs/mgmt_d_a.pdf">
+					<a target="_blank" class="download-item" href="pdfs/Managements_Discussion_and_Analysis.pdf">
 						<h4>Management’s discussion and analysis</h4>
 						<div href="#"></div>
 					</a>
-					<a target="_blank" class="download-item" href="pdfs/corp_gov.pdf">
+					<a target="_blank" class="download-item" href="pdfs/Corporate_Governance_Report.pdf">
 						<h4>Corporate governance report</h4>
 						<div href="#"></div>
 					</a>
-					<a target="_blank" class="download-item" href="pdfs/ceo_cfo.pdf">
+					<a target="_blank" class="download-item" href="pdfs/CEO_and_CFO_Certification.pdf">
 						<h4>CEO and CFO certification</h4>
 						<div href="#"></div>
 					</a>
-					<a target="_blank" class="download-item" href="pdfs/standalone_f_s.pdf">
+					<a target="_blank" class="download-item" href="pdfs/Standalone_Financial_Statements.pdf">
 						<h4>Standalone financial statements</h4>
 						<div href="#"></div>
 					</a>
-					<a target="_blank" class="download-item" href="pdfs/consolidated_f_s.pdf">
+					<a target="_blank" class="download-item" href="pdfs/Consolidated_Financial_Statements.pdf">
 						<h4>Consolidated financial statements</h4>
 						<div href="#"></div>
 					</a>
-					<a target="_blank" class="download-item" href="pdfs/business_r_r.pdf">
+					<a target="_blank" class="download-item" href="pdfs/Business_Responsibility_Report.pdf">
 						<h4>Business responsibility report</h4>
 						<div href="#"></div>
 					</a>
