fix jumping navs, footer disclosure, broken img links

--- a/premedia/infosys/chairmans-statement.html
+++ b/premedia/infosys/chairmans-statement.html
@@ -118,6 +118,8 @@
 					</div>
 				</div>
 			</div>
+			<p class="mt-4">This is a sample site for an annual report.</p>
+			<p>All information on this site is available in the public domain.</p>
 		</div>
 	</div>
 	<script src="js/jquery.min.js"></script>
