--- a/premedia/infosys/index.html
+++ b/premedia/infosys/index.html
@@ -118,14 +118,14 @@
 					<div>
 						<h2 class="font-theme-blue font-weight-bold">Revenues</h2>
 						<div class="key text-body pb-3">(in crores)</div>
-						<img data-aos="fade-right" class="d-block img-fluid" src="img/Revenues.png">
+						<img data-aos="fade-right" class="d-block img-fluid" src="img/HD/Revenues.png">
 					</div>
 				</div>
 				<div class="col-md-6 vh-60 p-5 d-flex justify-content-center align-items-center bg-theme-dark-blue">
 					<div>
 						<h2 class="text-white font-weight-bold">Net Profit</h2>
 						<div class="key text-white pb-3">(in crores)</div>
-						<img data-aos="fade-left" class="d-block img-fluid" src="img/Net-Profit.png">
+						<img data-aos="fade-left" class="d-block img-fluid" src="img/HD/Net-Profit.png">
 					</div>
 				</div>
 			</div>
@@ -191,6 +191,8 @@
 						</div>
 					</div>
 				</div>
+				<p class="mt-4">This is a sample site for an annual report.</p>
+				<p>All information on this site is available in the public domain.</p>
 			</div>
 		</div>
 	</div>
