--- a/premedia/infosys/live-enterprise/intuition.html
+++ b/premedia/infosys/live-enterprise/intuition.html
@@ -84,7 +84,7 @@
 					<div class="image-container">
 						<img data-aos="fade-left" class="img-fluid h-100 d-block mx-auto" src="../img/HD/Intuition1.png">
 						<div class="floating-image d-none d-lg-block">
-							<img data-aos="fade-right" data-aos-delay="500" class="img-fluid" src="../img/Intuition2.png">
+							<img data-aos="fade-right" data-aos-delay="500" class="img-fluid" src="../img/HD/Intuition2.png">
 						</div>
 					</div>
 
@@ -112,7 +112,7 @@
 							<div class="category-label mb-1">Mohammed Rafee Tarafdar</div>
 							<div>SVP – Unit Technology Officer</div>
 						</div>
-						<img data-aos="fade" data-aos-offset="0" src="../img/Intuition3.jpg" class="img-fluid rounded-circle mr-5" alt="...">
+						<img data-aos="fade" data-aos-offset="0" src="../img/HD/Intuition3.png" class="img-fluid rounded-circle mr-5" alt="...">
 					</div>
 				</div>
 
@@ -191,6 +191,8 @@
 					</div>
 				</div>
 			</div>
+			<p class="mt-4">This is a sample site for an annual report.</p>
+			<p>All information on this site is available in the public domain.</p>
 		</div>
 	</div>
 	<script src="../js/jquery.min.js"></script>
